src/objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterLogic__c</fullName>
        <description>Filter Logic: (1 AND 2) OR 3</description>
        <inlineHelpText>Filter Logic: (1 AND 2) OR 3</inlineHelpText>
        <label>Parameter Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the category is visible/usable.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsParameterExpressionValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parameter Expression Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QASampleText__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Sample Text</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>TextBlock__c.Type__c</field>
                <operation>equals</operation>
                <value>Sample Text</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>QASampleTexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QAUser__c</fullName>
        <label>QA User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <label>Record Type Developer Name</label>
        <picklist>
            <picklistValues>
                <fullName>LidlUSTypeI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LidlUSTypeII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LidlUSTypeIII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LidlUSTypeV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ValidParameterExpression__c</fullName>
        <formula>IF( IsParameterExpressionValid__c , 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 12, 12), 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 12, 12) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Parameter Expression</label>
        <type>Text</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>